[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/background0.png" type="Texture" id=1]
[ext_resource path="res://Assets/clouds.png" type="Texture" id=2]
[ext_resource path="res://Assets/birb.png" type="Texture" id=3]
[ext_resource path="res://Scripts/background.gd" type="Script" id=4]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 4 )

[node name="Base" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="Base"]
texture = ExtResource( 1 )
centered = false

[node name="Clouds1" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="Clouds1"]
self_modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 2 )
centered = false

[node name="Clouds2" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="Clouds2"]
self_modulate = Color( 1, 1, 1, 0.588235 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
flip_h = true
flip_v = true

[node name="Clouds3" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="Clouds3"]
self_modulate = Color( 1, 1, 1, 0.196078 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
centered = false
flip_h = true

[node name="Birb" type="ParallaxLayer" parent="."]
rotation = 0.523599
motion_offset = Vector2( 0, 2500 )
motion_mirroring = Vector2( 1440, 3000 )

[node name="Sprite" type="Sprite" parent="Birb"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false
flip_h = true
